# tirocinio

./: CMakeLists.txt  README.md  annt_net.cpp  annt_net.hpp  config.hpp  csv.cpp  csv.hpp  hello.cpp  network.cpp  network.hpp  parameters.json  print.py  pytorch.cpp  pytorch.hpp  rnn.cpp
annt/: CMakeLists.txt  annt_net.cpp  annt_net.hpp  main.cpp
annt/annt-lib/windows/include/Tools/: XParallel.hpp
common/: config.hpp  csv.cpp  csv.hpp  error.cpp  error.hpp  network.cpp  network.hpp  rnn.cpp  rnn.hpp
data/: pollution.csv
pytorch/: CMakeLists.txt  main.cpp  pytorch-rnn.cpp  pytorch.cpp  pytorch.hpp  pytorch_layers.cpp  pytorch_layers.hpp  pytorch_utils.cpp  pytorch_utils.hpp
